# check-phat-nguoi.github.io

./: .gitignore  .pre-commit-config.yaml  README.md  jsfh-conf.yaml  justfile  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: call-web-deploy.yml  deploy.yml  pre-commit.yml
docs/: index.md  support-apis.md
docs/dev/: setup.md
docs/dev/apis/: checkphatnguoi_vn.md  csgt_vn.md  etraffic.md  index.md  phatnguoi_vn.md  tra_cuu_phat_nguoi.md  zm_io_vn.md
docs/dev/requests/: zm_io_vn.http
docs/dev/telegram-bot/: dev.md  setup.md
docs/other/: disclaimer.md  references.md
docs/sample-config/: advanced.config.json  simple.config.json
docs/usage/: index.md  setup-config.md
docs/usage/247-bot/: telegram.md
docs/usage/advanced/: schedule-run.md
docs/usage/cli/: config.md  install.md
docs/usage/from-source/: index.md  pip.md  uv-just.md  uv.md
docs/usage/schedule/: cloudflare-workers.md  github-action.md
requests/: checkphatnguoi_vn.http  csgt_vn.http  etraffic.http  phatnguoi_vn.http  tra_cuu_phat_nguoi.http  zm_io_vn.http
sample-configs/: advanced.config.json  simple.config.json
src/cpn_generate_schemas/: __main__.py  cli_config.py  constants.py
