[project]
name = "cpn-docs"
version = "0.1.0.dev.1"
description = "Doc website for check-phat-nguoi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cpn-cli>=0.1.0",
  "json-schema-for-humans>=1.3.4",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-material>=9.5.50",
]

[project.scripts]
generate-schemas = "cpn_generate_schemas:__main__.main"

[tool.hatch.build.targets.wheel]
packages = ["src/cpn_generate_schemas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
