[project]
name = "cpn-docs"
version = "0.0.0"
authors = [
  { name = "KevinNitroG", email = "kevinnitro@duck.com" },
  { name = "NTGNguyen", email = 'ntgnguyen@duck.com' },
  { name = "WeeCiCi", email = 'wicici310@gmail.com' },
]
maintainers = [
  { name = "KevinNitroG", email = "kevinnitro@duck.com" },
  { name = "NTGNguyen", email = 'ntgnguyen@duck.com' },
  { name = "WeeCiCi", email = 'wicici310@gmail.com' },
]
description = "Doc website for check-phat-nguoi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cpn-cli",
  "json-schema-for-humans>=1.3.4",
  "mkdocs-git-revision-date-localized-plugin>=1.3.0",
  "mkdocs-material>=9.5.50",
]

[project.scripts]
generate-schemas = "cpn_generate_schemas:__main__.main"

[tool.hatch.build.targets.wheel]
packages = ["src/cpn_generate_schemas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.0.1"]
